Testing and Adding build toolchains.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,21 @@
 # BSD-3 Clause.
-# Copyright (C) 2018 Antony Jr. , All Rights Reserved.
-CMAKE_MINIMUM_REQUIRED( VERSION 3.2)
+# Copyright (C) 2018 Antony Jr.
+# -------------------------------
+#  CMake Support for QArchive.
+# -------------------------------
 
+CMAKE_MINIMUM_REQUIRED( VERSION 3.2)
 project(QArchive)
+
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 
-# Find the QtCore library
+# Find the QtCore library.
 find_package(Qt5Core)
 find_package(Qt5Concurrent)
-find_package(archive)
+
+# Include Directories.
 include_directories(.)
 include_directories(include)
 
