--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
 install:
   - sudo apt-get -y install qt59base
   - source /opt/qt*/bin/qt*-env.sh
-  - sudo apt-get -y install libzip-dev liblzma-dev libarchive-dev libarchive13
+  - sudo apt-get -y install libzip-dev liblzma-dev
 
 script:
   - git clone https://github.com/libarchive/libarchive.git
