--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ sudo: require
 dist: xenial
 
 before_install:
-  - sudo add-apt-repository ppa:beineri/opt-qt593-trusty -y
+  - sudo add-apt-repository ppa:beineri/opt-qt-5.10.0-xenial -y
   - sudo apt-get update -qq
 
 install:
-  - sudo apt-get -y install qt59base
+  - sudo apt-get -y install qt10base
   - source /opt/qt*/bin/qt*-env.sh
   - sudo apt-get -y install libzip-dev liblzma-dev libarchive-dev libarchive
 
