--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,24 @@
 language: cpp
 compiler: gcc
 sudo: require
-dist: xenial
+dist: trusty
 
 before_install:
-  - sudo add-apt-repository ppa:beineri/opt-qt-5.10.0-xenial -y
+  - sudo add-apt-repository ppa:beineri/opt-qt593-trusty -y
   - sudo apt-get update -qq
 
 install:
-  - sudo apt-get -y install qt10base
+  - sudo apt-get -y install qt59base
   - source /opt/qt*/bin/qt*-env.sh
-  - sudo apt-get -y install libzip-dev liblzma-dev libarchive-dev libarchive
+  - sudo apt-get -y install libzip-dev liblzma-dev
 
 script:
-  - cd tests
+  - git clone https://github.com/libarchive/libarchive
+  - cd libarchive
+  - cmake .
+  - make -j$(nproc)
+  - PREFIX=/usr/ make DESTDIR=/ install
+  - cd ../tests
   - qmake .
   - make -j$(nproc)
   - ./tests # Run Tests
