--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script:
   - cd libarchive
   - cmake .
   - make -j$(nproc)
-  - PREFIX=/usr/ make DESTDIR=/ install
+  - PREFIX=/usr/ sudo make DESTDIR=/ install
   - cd ../tests
   - qmake .
   - make -j$(nproc)
