--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,7 @@ environment:
     MINGW_ROOT: C:\msys64\mingw32
     CMAKE_GENERATOR: 'MSYS Makefiles'
     QT_DIR: C:\Qt\5.10.1\mingw53_32
+    MINGW_BUILD : 1
 
 install:
   - set PATH=%QT_DIR%\bin;%MINGW_ROOT%\bin;C:\msys64\usr\bin\;%PATH%
@@ -16,4 +17,5 @@ build_script:
   - cd tests
   - qmake .
   - mingw32-make
-  - release/tests.exe 
+  - ls
+  - dir 
