--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,15 @@
 language: cpp
 compiler: gcc
 sudo: require
-dist: trusty
+dist: xenial
 
 before_install:
-  - sudo add-apt-repository ppa:beineri/opt-qt593-trusty -y
+  - sudo add-apt-repository ppa:beineri/opt-qt-5.15.0-xenial -y
   - sudo apt-get update -qq
 
 install:
-  - sudo apt-get -y install qt59base
+  - sudo apt-get -y install build-essential libgl1-mesa-dev xvfb qt515base
   - source /opt/qt*/bin/qt*-env.sh
-  - sudo apt-get -y install libzip-dev liblzma-dev
 
 script:
   - git clone https://github.com/libarchive/libarchive
@@ -20,6 +19,8 @@ script:
   - sudo make install
   - sudo cp -fp /usr/local/lib/pkgconfig/libarchive.pc /usr/lib/pkgconfig/libarchive.pc
   - sudo cp -fp /usr/local/lib/libarchive.* /usr/lib/
+  - Xvfb :100 -ac &
+  - export DISPLAY=:100.0
   - cd ../tests
   - qmake .
   - make -j$(nproc)
