Makefile: Add install for CMake and find_package for libarchive.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,28 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 
-# Find the QtCore library.
+set(CMAKE_CXX_FLAGS "-Wall -Wextra")
+set(CMAKE_CXX_FLAGS_DEBUG "-g")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+
+
+# Find the QtCore library and libarchive.
+find_package(LibArchive)
 find_package(Qt5Core)
+
+# cmake macros used
+include(GNUInstallDirs)
+include(CMakePackageConfigHelpers)
 
 # Include Directories.
 include_directories(.)
 include_directories(include)
+
+if(BUILD_EXAMPLES)
+	add_subdirectory(examples/disk_compressor)
+	add_subdirectory(examples/disk_extractor)
+	add_subdirectory(examples/disk_extractor_with_QIODevice)
+endif()
 
 add_library(QArchive
 	    src/qarchivediskcompressor.cc
@@ -35,5 +51,50 @@ add_library(QArchive
 	    include/qarchiveioreader_p.hpp
 	    )
 
-target_link_libraries(QArchive PUBLIC Qt5::Core archive)
-target_include_directories(QArchive PUBLIC . include)
+SET(toinstall)
+list(APPEND toinstall
+    QArchive
+    include/qarchive_enums.hpp
+    include/qarchivediskextractor.hpp
+    include/qarchivediskcompressor.hpp
+)	
+
+target_link_libraries(QArchive PUBLIC Qt5::Core LibArchive::LibArchive)
+target_include_directories(QArchive INTERFACE "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/include>")
+target_include_directories(QArchive INTERFACE "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/QArchive>" )
+
+# Add pkg-config and install instructions
+configure_file(
+	"${PROJECT_SOURCE_DIR}/other/pkgconfig/QArchive.pc.in"
+	"${PROJECT_BINARY_DIR}/QArchive.pc"
+  @ONLY
+)
+
+install(FILES
+	${PROJECT_BINARY_DIR}/QArchive.pc
+  DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig")
+
+install(TARGETS
+	QArchive
+	EXPORT QArchiveTargets
+  DESTINATION "${CMAKE_INSTALL_LIBDIR}")
+
+install(FILES
+  ${toinstall}
+  DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/QArchive")
+
+# Add CMake config
+set(CMAKECONFIG_INSTALL_DIR "${CMAKE_INSTALL_LIBDIR}/cmake/QArchive")
+configure_package_config_file(
+	"${PROJECT_SOURCE_DIR}/other/cmake/QArchiveConfig.cmake.in"
+	"${CMAKE_CURRENT_BINARY_DIR}/QArchiveConfig.cmake"
+  INSTALL_DESTINATION  ${CMAKECONFIG_INSTALL_DIR}
+)
+
+install(FILES
+	"${CMAKE_CURRENT_BINARY_DIR}/QArchiveConfig.cmake"
+  DESTINATION "${CMAKECONFIG_INSTALL_DIR}")
+
+install(EXPORT QArchiveTargets
+	FILE QArchiveTargets.cmake
+  DESTINATION "${CMAKECONFIG_INSTALL_DIR}")
