--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -10,7 +10,7 @@ on:
 
 env:
   VCPKG_COMMIT: e4ce66eecfd3e5cca5eac06c971921bf8e37cf88
-  VCPKG_DEST_WIN: C:\qbt_tools\vcpkg
+  VCPKG_DEST_WIN: C:\tools\vcpkg
 
 jobs:
   windows_ci:
@@ -30,17 +30,27 @@ jobs:
          vcpkgGitCommitId: ${{ env.VCPKG_COMMIT }}
          setupOnly: true
 
+      - name: Configure VCPKG triplet overlay for release builds only
+        run: |
+          New-Item -Path ${{ github.workspace }} -Name "triplets_overlay" -ItemType Directory
+          Copy-Item ${{ env.RUNVCPKG_VCPKG_ROOT }}/triplets/x64-windows-static.cmake `
+            ${{ github.workspace }}/triplets_overlay/x64-windows-static-release.cmake
+          Add-Content ${{ github.workspace }}/triplets_overlay/x64-windows-static-release.cmake `
+            -Value "set(VCPKG_BUILD_TYPE release)"
+
       - name: Install Dependencies via VCPKG
         run: |
           $packages = `
             "qt5-base:x64-windows-static-release",
             "libarchive:x64-windows-static-release"
           ${{ env.RUNVCPKG_VCPKG_ROOT }}/vcpkg.exe upgrade `
+              --overlay-triplets=${{ github.workspace }}/triplets_overlay `
               --overlay-ports=${{ github.workspace }}/vcpkg `
               --no-dry-run
           foreach($package in $packages)
           {
             ${{ env.RUNVCPKG_VCPKG_ROOT }}/vcpkg.exe install $package `
+              --overlay-triplets=${{ github.workspace }}/triplets_overlay `
               --overlay-ports=${{ github.workspace }}/vcpkg `
               --clean-after-build
           }
@@ -48,7 +58,7 @@ jobs:
       - name: Build QArchive
         shell: cmd
         run: |
-          cmake -B build -G "Ninja" ^
+          cmake -B build ^
             -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_DEST_WIN }}\scripts\buildsystems\vcpkg.cmake ^
             -DVCPKG_TARGET_TRIPLET=x64-windows-static-release ^
             -DMSVC_RUNTIME_DYNAMIC=OFF ^
