add memory extractor.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,37 +36,42 @@ endif()
 
 
 if(BUILD_TESTS)
+	add_definitions(-DBUILD_TESTS)
 	add_subdirectory(tests)
 endif()
 
 if(BUILD_EXAMPLES)
+	add_definitions(-DBUILD_EXAMPLES)
 	add_subdirectory(examples/disk_compressor)
 	add_subdirectory(examples/disk_extractor)
 	add_subdirectory(examples/disk_extractor_with_QIODevice)
+	add_subdirectory(examples/memory_extractor)
 endif()
 
 add_library(QArchive
 	    src/qarchivediskcompressor.cc
+	    src/qarchivememoryextractor.cc
 	    src/qarchivediskextractor.cc
 	    src/qarchive_enums.cc
 	    src/qarchivediskcompressor_p.cc
-	    src/qarchivediskextractor_p.cc
+	    src/qarchiveextractor_p.cc
 	    src/qarchiveutils_p.cc
 	    src/qarchiveioreader_p.cc
 	    include/qarchivediskcompressor.hpp
+	    include/qarchivememoryextractor.hpp
 	    include/qarchivediskextractor.hpp
 	    include/qarchive_enums.hpp
 	    include/qarchivediskcompressor_p.hpp
-	    include/qarchivediskextractor_p.hpp
+	    include/qarchiveextractor_p.hpp
 	    include/qarchiveutils_p.hpp
 	    include/qarchiveioreader_p.hpp
-	    include/qarchive_global.hpp
-	    )
+	    include/qarchive_global.hpp)
 
 SET(toinstall)
 list(APPEND toinstall
     QArchive
     include/qarchive_enums.hpp
+    include/qarchivememoryextractor.hpp
     include/qarchivediskextractor.hpp
     include/qarchivediskcompressor.hpp
     include/qarchive_global.hpp
@@ -74,7 +79,7 @@ list(APPEND toinstall
 )	
 
 target_link_libraries(QArchive PUBLIC Qt5::Core LibArchive::LibArchive)
-target_include_directories(QArchive INTERFACE "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/include>")
+target_include_directories(QArchive INTERFACE "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/QArchive>")
 target_include_directories(QArchive INTERFACE "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/QArchive>" )
 
 # create a config.h to decide the type of build
