--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -26,5 +26,7 @@ add_executable(QArchiveTests main.cc
 			     QArchiveDiskCompressorTests.cc
 			     QArchiveDiskCompressorTests.hpp
 			     QArchiveDiskExtractorTests.cc
-			     QArchiveDiskExtractorTests.hpp)
+			     QArchiveDiskExtractorTests.hpp
+			     QArchiveMemoryExtractorTests.cc
+			     QArchiveMemoryExtractorTests.hpp)
 target_link_libraries(QArchiveTests PRIVATE QArchive Qt5::Test Qt5::Concurrent)
