add memory compressor example and fix segfault in compressor class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ if(BUILD_EXAMPLES)
 	add_subdirectory(examples/disk_extractor)
 	add_subdirectory(examples/disk_extractor_with_QIODevice)
 	add_subdirectory(examples/memory_extractor)
+	add_subdirectory(examples/memory_compressor)
 endif()
 
 add_library(QArchive
