Adding Qt6 support, keeping Qt5 support as a backup solution.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,10 @@ option(QARCHIVE_STATIC "Static Build of QArchive" ON)
 
 # Find the QtCore library and libarchive.
 find_package(LibArchive)
-find_package(Qt5Core)
+find_package(Qt6 COMPONENTS Core)
+if(NOT Qt6_FOUND)
+    find_package(Qt5 COMPONENTS Core REQUIRED)
+endif()
 
 # cmake macros used
 include(GNUInstallDirs)
@@ -94,7 +97,11 @@ list(APPEND toinstall
     ${PROJECT_BINARY_DIR}/config.h
 )	
 
-target_link_libraries(QArchive PUBLIC Qt5::Core LibArchive::LibArchive)
+if(Qt6_FOUND)
+    target_link_libraries(QArchive PUBLIC Qt6::Core LibArchive::LibArchive)
+else()
+    target_link_libraries(QArchive PUBLIC Qt5::Core LibArchive::LibArchive)
+endif()
 target_include_directories(QArchive INTERFACE
 				$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
 				$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
