--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,8 +12,12 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 if(NOT BUILD_TESTS)
 	find_package(QArchive)
 endif()
-find_package(Qt5Test)
-find_package(Qt5Concurrent)
+
+find_package(QT NAMES Qt6 Qt5 COMPONENTS Test REQUIRED)
+find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Test REQUIRED)
+if(${QT_VERSION_MAJOR} EQUAL 5)
+    find_package(Qt5Concurrent)
+endif()
 
 # Include Directories.
 include_directories(.)
@@ -31,4 +35,8 @@ add_executable(QArchiveTests main.cc
 			     QArchiveDiskExtractorTests.hpp
 			     QArchiveMemoryExtractorTests.cc
 			     QArchiveMemoryExtractorTests.hpp)
-target_link_libraries(QArchiveTests PRIVATE QArchive Qt5::Test Qt5::Concurrent)
+if(${QT_VERSION_MAJOR} EQUAL 5)
+    target_link_libraries(QArchiveTests PRIVATE QArchive Qt5::Test Qt5::Concurrent)
+else()
+    target_link_libraries(QArchiveTests PRIVATE QArchive Qt${QT_VERSION_MAJOR}::Test)
+endif()
