--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: "Test and Deploy"
+name: Tests
 
 on:
   push:
@@ -9,12 +9,9 @@ on:
       - master
 
 jobs:
-  Test-and-Deploy:
-    name: "Test and Deploy"
+  TestLinux:
+    name: "QArchive Tests (GNU+Linux amd64)"
     runs-on: ubuntu-18.04
-    defaults:
-      run:
-        working-directory: website
     steps:
       - uses: actions/checkout@v2
       - uses: lukka/get-cmake@latest
@@ -29,7 +26,6 @@ jobs:
 
       - name: Install LibArchive
         run: |
-          cd ..
           mkdir build
           cd build
           git clone https://github.com/libarchive/libarchive
@@ -41,15 +37,13 @@ jobs:
           cd ..
           cd ..
           rm -rf build
-          cd website
           sudo cp -fp /usr/local/lib/pkgconfig/libarchive.pc /usr/lib/pkgconfig/libarchive.pc
           sudo cp -fp /usr/local/lib/libarchive.* /usr/lib/
 
-      - name: Run Unit Tests
+      - name: Run Tests
         run: |
           Xvfb :100 -ac &
           export DISPLAY=:100.0
-          cd ..
           mkdir build
           cd build
           source /opt/qt*/bin/qt*-env.sh || true
@@ -58,37 +52,25 @@ jobs:
           ./tests/QArchiveTests
           cd ..
           rm -rf build
-          cd website
 
-      - name: Setup Node
-        if: github.event_name != 'pull_request'
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14.x'
+  TestMac:
+    name: "QArchive Tests (macOS x86_64)"
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: lukka/get-cmake@latest
 
-      - name: Get yarn cache
-        if: github.event_name != 'pull_request'
-        id: yarn-cache
-        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Install Qt and LibArchive
+        run: brew install qt@5 libarchive
 
-      - name: Cache dependencies
-        if: github.event_name != 'pull_request'
-        uses: actions/cache@v2
-        with:
-          path: ${{ steps.yarn-cache.outputs.dir }}
-          key: ${{ runner.os }}-website-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-website-
-
-      - run: yarn install --frozen-lockfile
-        if: github.event_name != 'pull_request'
-        
-      - run: yarn build
-        if: github.event_name != 'pull_request'
-        
-      - name: Deploy
-        if: github.event_name != 'pull_request'
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./website/build/QArchive
+      - name: Install QArchive
+        run: |
+          mkdir build
+          cd build
+          export QT_DIR=$(brew --prefix qt@5)
+          cmake -DBUILD_TESTS=ON ..
+          cmake --build . --config release
+          ./tests/QArchiveTests
+          cd ..
+          rm -rf build
+   
